--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -74,7 +74,7 @@ The paper did an overview of the Giving, Volunteering, and Participating landsca
 
 ## A Peak into the Demographics and GVP Landscape in 2018
 
-This paper mainly focuses on the Giving, Volunteering, and Participating landscape in 2018. By gaining an overview of the GVP landscape in 2018, the paper serves as a point of reference when comparing it to the GVP landscape during the COVID-19 pandemic. Since people tend to stay at home more and avoid physical contact with people from other households as much as possible, the GVP landscape during the COVID-19 pandemic should offer a different insight than the one in 2018. From figure \@ref(fig:gender) and figure \@ref(fig:age), we can see that most respondents are female and most respondents are 65 years and older. A large portion of the respondents have received a post-secondary diploma and there is a small portion of people who have an education that is less than high school as shown in figure \@ref(fig:education). From \@ref(fig:household-size), we can see the household size bar plot skews to the left. It shows that most of the respondents either live by themselves or live with another person. From figure \@ref(fig:province), we can also see that most of the respondents were from Ontario. If we refer to the population in Canada by province, the ratio of the number of people in each province in the survey is roughly equal to the ratio of the actual number of people in each province. However, if we want to gain a better picture of the population in Canada, we should include respondents in the three territories as well. We will talk more about this in the NEXT STEP section.
+This paper mainly focuses on the Giving, Volunteering, and Participating landscape in 2018. By gaining an overview of the GVP landscape in 2018, the paper serves as a point of reference when comparing it to the GVP landscape during the COVID-19 pandemic. Since people tend to stay at home more and avoid physical contact with people from other households as much as possible, the GVP landscape during the COVID-19 pandemic should offer a different insight than the one in 2018. From figure \@ref(fig:gender) and figure \@ref(fig:age), we can see that most respondents are female and most respondents are 65 years and older. A large portion of the respondents have received a post-secondary diploma and there is a small portion of people who have an education that is less than high school as shown in figure \@ref(fig:education). From \@ref(fig:household-size), we can see the household size bar plot skews to the left. It shows that most of the respondents either live by themselves or live with another person. From figure \@ref(fig:province), we can also see that most of the respondents were from Ontario. If we refer to the population in Canada by province, the ratio of the number of people in each province in the survey is roughly equal to the ratio of the actual number of people in each province. However, if we want to gain a better picture of the population in Canada, we should include respondents in the three territories as well. We will talk more about this in section \@ref(next-steps).
 
 ## The decision of Giving or Not Giving is most affect by personal reasons
 
